--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,32 @@
-# Gradle properties
+# Project
+version=2.0.
+group=net.darkhax.leveltextfix
+
+# Common
+minecraft_version=1.18.2
+
+# Forge
+forge_version=40.2.1
+
+# Fabric
+fabric_version=0.76.0+1.18.2
+fabric_loader_version=0.14.18
+
+# Mod options
+mod_name=LevelTextFix
+mod_author=Darkhax
+mod_id=leveltextfix
+mod_homepage=https://www.curseforge.com/minecraft/mc-mods/level-text-fix
+mod_source=https://github.com/Darkhax-Minecraft/Level-Text-Fix
+mod_issues=https://github.com/Darkhax-Minecraft/Level-Text-Fix/issues
+mod_description=Fix issues related to level text.
+mod_license=LGPL V2.1
+mod_twitter=https://twitter.com/DarkhaxDev
+mod_discord=https://discord.darkhax.net
+
+# Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-group=net.darkhax.leveltextfix
-version=1.0.0
-minecraft_version=1.16.5
-forge_version=36.2.39
-mod_name=LevelTextFix
-mod_vendor=Darkhax
-mod_download=https://www.curseforge.com/minecraft/mc-mods/level-text-fix
-mod_issues=https://github.com/Darkhax-Minecraft/Level-Text-Fix/issues
-mod_authors=Darkhax
-mod_description=Fixes level text issues.
+
+# CurseForgeGradle
+curse_project=840817
