--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # Project
-version=5.0
+version=6.0
 group=net.darkhax.leveltextfix
 
 # Common
-minecraft_version=1.19.4
+minecraft_version=1.20
 
 # Forge
-forge_version=45.0.24
+forge_version=46.0.14
 
 # Fabric
-fabric_version=0.76.0+1.19.4
-fabric_loader_version=0.14.18
+fabric_version=0.83.0+1.20
+fabric_loader_version=0.14.21
 
 # Mod options
 mod_name=LevelTextFix
@@ -30,3 +30,6 @@ org.gradle.daemon=false
 
 # CurseForgeGradle
 curse_project=840817
+
+# Modrinth
+modrinth_project=trJAIZhE
