--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ minecraft_version=1.20.4
 forge_version=49.0.19
 
 # NeoForge
-neoforge_version=20.4.91-beta
-neoforge_version_range=20.4,
+neoforge_version=20.4.194
+neoforge_version_range=20.4.193,
 
 # Fabric
 fabric_version=0.93.1+1.20.4
